--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,32 +2,37 @@ version: '3'
 
 services:
   mariadb:
-    image: mariadb:latest # tmp
-#    build: requirements/mariadb
+#    image: mariadb:latest # tmp
+    build: requirements/mariadb
     restart: always
+    healthcheck:
+      test: [ "CMD-SHELL", "mysqladmin ping -h localhost -u root --password=$$MYSQL_ROOT_PASSWORD" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: db
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      - MYSQL_ROOT_PASSWORD
+      - MYSQL_DATABASE
+      - MYSQL_USER
+      - MYSQL_PASSWORD
     volumes:
       - db_data:/var/lib/mysql
     networks:
       - wordpress_network
 
   wordpress:
-    image: wordpress:latest
-#    build: requirements/wordpress
+#    image: wordpress:latest
+    build: requirements/wordpress
     depends_on:
       - mariadb
     ports:
       - "8000:80"
     restart: always
     environment:
-      WORDPRESS_DB_HOST: mariadb:3306
-      WORDPRESS_DB_NAME: db
-      WORDPRESS_DB_USER: user
-      WORDPRESS_DB_PASSWORD: password
+      - WORDPRESS_DB_HOST
+      - WORDPRESS_DB_NAME
+      - WORDPRESS_DB_USER
+      - WORDPRESS_DB_PASSWORD
     volumes:
       - wp_data:/var/www/html
     networks:
