--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -1,15 +1,19 @@
 # Adminer
+#FROM adminer:latest
 FROM alpine:3.18
 
 RUN apk add --no-cache \
-    php81 \
-    php81-pdo_mysql \
+    php \
+    php-pdo_mysql \
+    php-mbstring \
+    php-session \
     wget
 
 RUN mkdir -p /var/www/html/ \
     && wget https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1.php \
-       -O /var/www/html/adminer.php
+       -O /var/www/html/index.php
 
 EXPOSE 8080
 
-CMD ["php81", "-S", "0.0.0.0:8080", "-t", "/var/www/html"]
+#CMD ["php", "-S", "0.0.0.0:8080", "-t", "/var/www/html", "-d", "display_errors=On"]
+CMD ["php", "-S", "0.0.0.0:8080", "-t", "/var/www/html"]
