--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,42 +1,27 @@
-http {
-    server {
-        listen  80 default;
-        listen  [::]:80 default;
-        return  301  https://$host$request_uri;
-    }
+server {
+    listen 80 default;
+    listen [::]:80 default;
+    server_name localhost;
+    return 301 https://$host$request_uri;
+}
 
-    server {
-        listen  443 ssl;
-        listen  [::]:443 ssl;
+server {
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
+	server_name _;
 
-        server_name takira.42.fr localhost;
+	ssl_protocols       TLSv1.2 TLSv1.3;
+	ssl_certificate_key /etc/nginx/ssl/inception.key;
+	ssl_certificate     /etc/nginx/ssl/inception.crt;
 
-        ssl_certificate         /etc/nginx/ssl/inception.crt;
-        ssl_certificate_key     /etc/nginx/ssl/inception.key;
-        ssl_protocols           TLSv1.2 TLSv1.3;
+    root /var/www/html;
 
-        root    /var/www/html/wordpress;
-        index   index.php index.html;
-
-        location = / {
-            index /index.html /index.php?$args;
-        }
-
-        # WordPress handling
-        location / {
-            try_files $uri $uri/ /index.php?$args;
-        }
-
-        location ~ \.php$ {
-            try_files $uri =404;
-
-            fastcgi_pass                    wordpress:9000;
-            fastcgi_index                   index.php;
-            include                         fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME   $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO         $fastcgi_path_info;
-            fastcgi_split_path_info         ^(.+\.php)(/.+)$;
-        }
+    location / {
+        proxy_pass http://wordpress:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
 }
