:sparkles: add: wordpress

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,18 @@
-MYSQL_ROOT_PASS=root
+MYSQL_ROOT_PASSWORD=root
 MYSQL_DB_NAME=wp_db
-MYSQL_USER=wp_user
-MYSQL_PASS=wp_pass
+MYSQL_USER=db_user
+MYSQL_PASSWORD=db_pass
 
+WP_PATH=/var/www/html
 WP_DB_HOST=mariadb:3306
 WP_DB_NAME=wp_db
-WP_DB_USER=wp_user
-WP_DB_PASS=wp_pass
+WP_DB_USER=db_user
+WP_DB_PASSWORD=db_pass
+WP_URL=takira.42.fr
+WP_TITLE=wp_title
+WP_ADMIN_USER=wp_admin #todo admin
+WP_ADMIN_PASSWORD=wp_admin_pass #todo admin
+WP_ADMIN_EMAIL=wp_admin@email.com #todo admin
+WP_EDITOR_USER=wp_editor_user
+WP_EDITOR_PASSWORD=wp_editor_pass
+WP_EDITOR_EMAIL=wp_editor@email.com
