--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -6,22 +6,27 @@ server {
 }
 
 server {
-	listen 443 ssl http2;
-	listen [::]:443 ssl http2;
-	server_name _;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name _;
 
-	ssl_protocols       TLSv1.2 TLSv1.3;
-	ssl_certificate_key /etc/nginx/ssl/inception.key;
-	ssl_certificate     /etc/nginx/ssl/inception.crt;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_certificate_key /etc/nginx/ssl/inception.key;
+    ssl_certificate     /etc/nginx/ssl/inception.crt;
 
     root /var/www/html;
 
+    # 静的ファイルに対するリクエストは、直接ファイルシステムから提供されます
     location / {
-        proxy_pass http://wordpress:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        try_files $uri $uri/ /index.php$is_args$args;
+    }
+
+    # PHP リクエストを php-fpm に転送する
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass wordpress:9000; # WordPress サービスの php-fpm へリクエストを転送
+        fastcgi_index index.php;
     }
 
 }
