--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,32 +1,36 @@
 server {
-    listen 80 default;
-    listen [::]:80 default;
+    listen 80 default_server;
+    listen [::]:80 default_server;
     server_name localhost;
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name _;
+	listen      443 ssl;
+	listen      [::]:443 ssl;
+	server_name takira.42.fr localhost;
 
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_certificate_key /etc/nginx/ssl/inception.key;
-    ssl_certificate     /etc/nginx/ssl/inception.crt;
+	ssl_certificate     /etc/nginx/ssl/inception.crt;
+	ssl_certificate_key /etc/nginx/ssl/inception.key;
+	ssl_protocols       TLSv1.2 TLSv1.3;
 
-    root /var/www/html;
+	root /var/www/html/;
+    index index.php;
 
-    # 静的ファイルに対するリクエストは、直接ファイルシステムから提供されます
     location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?$args;
     }
 
-    # PHP リクエストを php-fpm に転送する
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_pass wordpress:9000; # WordPress サービスの php-fpm へリクエストを転送
-        fastcgi_index index.php;
-    }
-
+	# https://www.nginx.com/resources/wiki/start/topics/examples/phpfcgi/#connecting-nginx-to-php-fpm
+	location ~ [^/]\.php(/|$) {
+		fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+			if (!-f $document_root$fastcgi_script_name) {
+				return 404;
+			}
+			fastcgi_param HTTP_PROXY "";
+			fastcgi_pass wordpress:9000;
+			fastcgi_index index.php;
+			include fastcgi_params;
+			fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
+	}
 }
