:bug: nginx dns ok

--- a/srcs/requirements/bonus/adminer/Dockerfile
+++ b/srcs/requirements/bonus/adminer/Dockerfile
@@ -4,10 +4,10 @@ FROM alpine:3.18
 
 RUN apk add --no-cache \
     curl=8.5.0-r0 \
-    php=8.1.27-r0 \
-    php-pdo_mysql=8.1.27-r0 \
-    php-mbstring=8.1.27-r0 \
-    php-session=8.1.27-r0 \
+    php81=8.1.27-r0 \
+    php81-pdo_mysql=8.1.27-r0 \
+    php81-mbstring=8.1.27-r0 \
+    php81-session=8.1.27-r0 \
     wget=1.21.4-r0
 
 RUN mkdir -p /var/www/html/ \
