--- a/srcs/compose.yaml
+++ b/srcs/compose.yaml
@@ -4,11 +4,10 @@ services:
   mariadb:
 #    image: mariadb:latest
     image: mariadb:inception
-    build:
-      context: ./requirements/mariadb
+    build: requirements/mariadb
     restart: always
     healthcheck:
-      test: [ "CMD-SHELL", "mysqladmin ping -h localhost -u root --password=$$MYSQL_ROOT_PASSWORD" ]
+      test: ["CMD-SHELL", "mysqladmin ping --host=localhost --user=root --password=$$MYSQL_ROOT_PASSWORD"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -20,22 +19,22 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     networks:
+      - database_network
       - wordpress_network
 
   wordpress:
 #    image: wordpress:latest
     image: wordpress:inception
-    build:
-      context: ./requirements/wordpress
+    build: requirements/wordpress
     depends_on:
       mariadb:
         condition: service_healthy
     restart: always
-#    healthcheck:
-#      test: ["CMD-SHELL", "curl --fail localhost:9000 || exit 1"]
-#      interval: 30s
-#      timeout: 10s
-#      retries: 3
+    healthcheck:
+      test: ["CMD", "php", "--run", "echo 'PHP is working';"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DB_NAME=wp_db
@@ -62,40 +61,69 @@ services:
   nginx:
 #    image: nginx:latest
     image: nginx:inception
-    build:
-      context: ./requirements/nginx
+    build: requirements/nginx
     depends_on:
-      - wordpress
-#      wordpress:
-#        condition: service_healthy
+      wordpress:
+        condition: service_healthy
     ports:
       - "443:443"
     restart: always
-#    healthcheck:
-#      test: ["CMD-SHELL", "curl --fail localhost:80 || exit 1"]
-#      interval: 30s
-#      timeout: 10s
-#      retries: 3
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail --insecure https://192.168.1.10 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     volumes:
       - wp_data:/var/www/html
     networks:
-      - wordpress_network
+      wordpress_network:
+        ipv4_address: 192.168.1.10
+    dns:
+      - 192.168.1.53
 
-#  adminer:
-#    image: adminer:inception
-#    build:
-#      context: ./requirements/bonus/adminer
-#    depends_on:
-#      mariadb:
-#        condition: service_healthy
-#    ports:
-#      - "8080:8080"
-#    restart: always
-#    healthcheck:
-#      test: ["CMD-SHELL", "curl --fail localhost:8080 || exit 1"]
-#      interval: 30s
-#      timeout: 10s
-#      retries: 3
+  dnsmasq:
+    image: dnsmasq:inception
+    build: requirements/bonus/dnsmasq
+    depends_on:
+      wordpress:
+        condition: service_healthy
+    ports:
+      - "10.0.2.15:53:53/udp"  # todo: env
+      - "10.0.2.15:53:53/tcp"  # todo: env
+    cap_add:
+      - NET_ADMIN
+    restart: always
+    healthcheck:
+      test: ["CMD", "nslookup", "takira.42.fr", "127.0.0.1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      wordpress_network:
+        ipv4_address: 192.168.1.53
+
+  adminer:
+    image: adminer:inception
+    build: requirements/bonus/adminer
+    depends_on:
+      mariadb:
+        condition: service_healthy
+    ports:
+      - "8080:8080"
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail localhost:8080 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      - database_network
+
+#  redis:
+#    networks:
+#      - wordpress_network
+#
+#  ftp:
 #    networks:
 #      - wordpress_network
 
@@ -105,3 +133,7 @@ volumes:
 
 networks:
   wordpress_network:
+    ipam:
+      config:
+        - subnet: 192.168.1.0/24  # 192.168.1.1~192.168.1.254
+  database_network:
