--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,9 +7,9 @@ RUN apk add --no-cache \
     openssl=3.1.4-r5
 
 # nginx
-RUN mkdir -p /var/run/nginx
-#COPY conf/nginx.conf /etc/nginx/nginx.conf
-COPY conf/default.conf /etc/nginx/http.d/default.conf
+RUN mkdir -p /var/run/nginx /etc/nginx/http.d
+COPY conf/nginx.conf /etc/nginx/nginx.conf
+COPY conf/http.d/default.conf /etc/nginx/http.d/default.conf
 
 # ssl certificate
 ## x509  : self-signed certificate
