--- a/srcs/requirements/bonus/dnsmasq/conf/dnsmasq.conf
+++ b/srcs/requirements/bonus/dnsmasq/conf/dnsmasq.conf
@@ -1,14 +1,22 @@
 # Configuration file for dnsmasq.
-port=53
+# port=53
 log-queries
-# no-resolv
-no-hosts
-server=192.168.1.53
-address=/takira.42.fr/192.168.1.10
+log-facility=/var/log/dnsmasq/dnsmasq.log
+## no-resolv
 cache-size=0
 
-addn-hosts=/etc/hosts-dnsmasq
-expand-hosts
-domain=icebird.local
+# expand-hosts
+# domain=icebird.local
+# domain-needed
+# bogus-priv
+
+#Define Port
+port=53
 domain-needed
 bogus-priv
+
+#dont use hosts nameservers
+# no-resolv
+no-hosts
+
+addn-hosts=/etc/hosts-dnsmasq
