--- a/srcs/requirements/nginx/conf/http.d/default.conf
+++ b/srcs/requirements/nginx/conf/http.d/default.conf
@@ -20,7 +20,7 @@
 #         include /etc/nginx/fastcgi.conf;
 #     }
 # }
-9
+
 # server {
 #     listen          80  default_server;
 #     listen          [::]:80  default_server;
@@ -28,8 +28,9 @@
 #     return          301  https://$host$request_uri;
 # }
 
+# takira.42.fr
 server {
-	listen          192.168.1.10:443  ssl;
+	listen          443  ssl;
 	listen          [::]:443  ssl;
 	server_name     takira.42.fr;
 
@@ -57,4 +58,27 @@ server {
 	}
 	# Connecting NGINX to PHP FPM
 	# https://www.nginx.com/resources/wiki/start/topics/examples/phpfcgi/#connecting-nginx-to-php-fpm
+}
+
+
+# takira.hugo.com
+server {
+	listen          443  ssl;
+	listen          [::]:443  ssl;
+	server_name     takira.hugo.com;
+
+	ssl_certificate     /etc/nginx/ssl/inception_hugo.crt;
+	ssl_certificate_key /etc/nginx/ssl/inception_hugo.key;
+	ssl_protocols       TLSv1.2 TLSv1.3;
+
+	root            /var/www/html;
+    index           index.php;
+
+    location / {
+        proxy_pass http://192.168.1.20:1313;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
