:bug: fix: response speed for resolve domain name

--- a/srcs/requirements/bonus/dnsmasq/conf/dnsmasq.conf
+++ b/srcs/requirements/bonus/dnsmasq/conf/dnsmasq.conf
@@ -1,22 +1,22 @@
 # Configuration file for dnsmasq.
-# port=53
 log-queries
 log-facility=/var/log/dnsmasq/dnsmasq.log
-## no-resolv
-cache-size=0
+cache-size=1000
+min-cache-ttl=1
 
 # expand-hosts
 # domain=icebird.local
 # domain-needed
 # bogus-priv
 
+#Use the default nameservers
+server=8.8.8.8
+server=8.8.4.4
+expand-hosts
+
 #Define Port
 port=53
 domain-needed
 bogus-priv
-
-#dont use hosts nameservers
-# no-resolv
-no-hosts
 
 addn-hosts=/etc/hosts-dnsmasq
