--- a/srcs/requirements/nginx/conf/http.d/default.conf
+++ b/srcs/requirements/nginx/conf/http.d/default.conf
@@ -71,11 +71,11 @@ server {
 	ssl_certificate_key /etc/nginx/ssl/inception_hugo.key;
 	ssl_protocols       TLSv1.2 TLSv1.3;
 
-	root            /var/www/html;
-    index           index.php;
+# 	root            /var/www/html;
+#     index           index.php;
 
     location / {
-        proxy_pass http://192.168.1.20:1313;
+        proxy_pass http://hugo:1313;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
