--- a/srcs/requirements/nginx/conf/http.d/default.conf
+++ b/srcs/requirements/nginx/conf/http.d/default.conf
@@ -63,22 +63,30 @@ server {
 
 # takira.hugo.com
 server {
+	listen          80;
+	listen          [::]:80;
+
 	listen          443  ssl;
 	listen          [::]:443  ssl;
 	server_name     takira.hugo.com;
+
+
 
 	ssl_certificate     /etc/nginx/ssl/inception_hugo.crt;
 	ssl_certificate_key /etc/nginx/ssl/inception_hugo.key;
 	ssl_protocols       TLSv1.2 TLSv1.3;
 
-# 	root            /var/www/html;
-#     index           index.php;
+    root    /var/www/blog/public;
 
     location / {
+#         sub_filter_once off;
+#         sub_filter 'http://' 'https://';
         proxy_pass http://hugo:1313;
         proxy_set_header Host $host;
+#         proxy_set_header Host takira.hugo.com;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
 }
