:sparkles: add: update lint output message and fix make clean

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
           docker-compose --version
 
       - name: Build and start containers
-        run: make up-d
+        run: make start
 
       - name: Check containers health
         run: |
