--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,13 +2,14 @@
 FROM alpine:3.18
 
 RUN apk add --no-cache \
+    gettext-envsubst=0.21.1-r7 \
     curl=8.5.0-r0 \
     nginx=1.24.0-r7 \
     openssl=3.1.4-r5
 
 RUN mkdir -p /var/run/nginx /etc/nginx/http.d
 COPY conf/nginx.conf /etc/nginx/nginx.conf
-COPY conf/http.d/default.conf /etc/nginx/http.d/default.conf
+COPY conf/http.d/default.conf.template /etc/nginx/http.d/default.conf.template
 
 COPY tools/entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/entrypoint.sh
