--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -11,3 +11,7 @@ pm.max_children = 5
 pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
+
+; PHP Error log settings
+php_admin_value[error_log] = /var/www/html/wp-content/logs/php-errors.log
+php_admin_flag[log_errors] = on
