--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,7 +5,7 @@ RUN apk add --no-cache \
     mariadb=10.11.6-r0 \
     mariadb-client=10.11.6-r0
 
-RUN mkdir -p /var/lib/mysql /var/run/mysqld
+RUN mkdir -p /var/lib/mysql /var/run/mysqld /var/log/mysql
 
 COPY conf/my.cnf /etc/mysql/my.cnf
 
