--- a/srcs/compose.yaml
+++ b/srcs/compose.yaml
@@ -31,11 +31,16 @@ services:
     depends_on:
       mariadb:
         condition: service_healthy
+      dnsmasq:
+        condition: service_healthy
       redis:
         condition: service_healthy
     restart: always
     healthcheck:
-      test: ["CMD", "php", "--run", "echo 'PHP is working';"]
+#      test: ["CMD", "php", "--run", "echo 'PHP is working';"]
+      test: ["CMD-SHELL", "php --run \"echo 'PHP is working';\" && redis-cli -h redis ping || exit 1"]
+#      test: ["CMD-SHELL", "curl --fail --insecure https://$$WP_DOMAIN && redis-cli -h redis ping || exit 1"]
+#      test: ["CMD", "php", "--run", "echo 'PHP is working';"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -73,11 +78,13 @@ services:
         condition: service_healthy
       hugo:
         condition: service_healthy
+      dnsmasq:
+        condition: service_healthy
     ports:
       - "443:443"
     restart: always
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail --insecure https://192.168.1.10 || exit 1"]
+      test: ["CMD-SHELL", "curl --fail --insecure https://$WP_DOMAIN || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -90,7 +97,7 @@ services:
       nginx_network:
         ipv4_address: ${WEB_PAGE_IP:?WEB_PAGE_IP is not set}  # takira.42.fr or takira.hugo.com
     environment:
-      COUNTY: ${COUNTY:?COUNTY is not set}
+      COUNTRY: ${COUNTRY:?COUNTRY is not set}
       STATE: ${STATE:?STATE is not set}
       ORGANIZATION: ${ORGANIZATION:?ORGANIZATION is not set}
       CRT_DIR: ${CRT_DIR:?CRT_DIR is not set}
@@ -100,12 +107,24 @@ services:
     dns:
       - ${DNSMASQ_IP:?DNSMASQ_IP is not set}
 
+  redis:
+    image: redis:inception
+    build: requirements/bonus/redis
+    ports:
+      - "${HOST_IP}:6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    restart: always
+    networks:
+      - nginx_network
+
   dnsmasq:
     image: dnsmasq:inception
     build: requirements/bonus/dnsmasq
-    depends_on:
-      wordpress:
-        condition: service_healthy
     ports:
       - "${HOST_IP}:53:53/udp"
       - "${HOST_IP}:53:53/tcp"
@@ -141,27 +160,13 @@ services:
     networks:
       - database_network
 
-  redis:
-    image: redis:inception
-    build: requirements/bonus/redis
-    ports:
-      - "${HOST_IP}:6379:6379"
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-    restart: always
-    networks:
-      - nginx_network
-
   ftpd:
     image: ftpd:inception
     build: requirements/bonus/ftpd
     ports:
       - "21:21"
-      - "30000-30009:30000-30009"
+      - "30000:30000"
+#      - "30000-30009:30000-30009"
     volumes:
       - wp_data:/var/www/html
       - /var/log/inception/pure-ftpd:/var/log/pure-ftpd
