--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,6 +4,7 @@ FROM alpine:3.18
 # PHP
 RUN apk add --no-cache \
     curl=8.5.0-r0 \
+    icu-data-full=73.2-r2 \
     php81=8.1.27-r0 \
     php81-ctype=8.1.27-r0 \
     php81-curl=8.1.27-r0 \
@@ -13,11 +14,13 @@ RUN apk add --no-cache \
     php81-mbstring=8.1.27-r0 \
     php81-mysqli=8.1.27-r0 \
     php81-openssl=8.1.27-r0 \
+    php81-pecl-redis \
     php81-phar=8.1.27-r0 \
     php81-session=8.1.27-r0 \
+    php81-tokenizer=8.1.27-r0 \
     php81-xml=8.1.27-r0 \
     php81-xmlreader=8.1.27-r0 \
-    icu-data-full=73.2-r2
+    redis=7.0.15-r0
 
 # WP-CLI
 RUN curl --silent -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
@@ -26,15 +29,11 @@ RUN curl --silent -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/ph
 # wp -> wp-cli.phar https://github.com/wp-cli/config-command/issues/31
 
 ENV WP_PATH="/var/www/html"
-RUN mkdir -p "${WP_PATH}" \
-    && chmod 755 "${WP_PATH}" \
+RUN mkdir -p "${WP_PATH}" /var/www/html/wp-content/logs \
     && chown -R nobody:nobody "${WP_PATH}" \
-    && wp-cli.phar core download --allow-root --path="${WP_PATH}"
+    && chmod -R 755 "${WP_PATH}"
 
 COPY conf/www.conf /etc/php81/php-fpm.d/www.conf
-#COPY tools/helthcheck.php /var/www/html/healthcheck.php
-
-RUN mkdir -p /var/www/html/wp-content/logs
 
 EXPOSE 9000
 
