--- a/srcs/requirements/bonus/hugo/Dockerfile
+++ b/srcs/requirements/bonus/hugo/Dockerfile
@@ -6,9 +6,7 @@ RUN apk add --no-cache \
     hugo=0.111.3-r6
 
 WORKDIR /var/www/blog
+
 EXPOSE 1313
 
-#CMD ["hugo", "server", "--bind", "0.0.0.0", "--appendPort=false"]
-CMD ["hugo", "server", "--bind", "0.0.0.0", "--baseURL" , "takira.hugo.com/", "--appendPort=false"]
-#CMD ["hugo", "server", "--bind", "0.0.0.0", "--baseURL" , "takira.hugo.com/", "--appendPort=false"]
-#CMD ["hugo", "server", "--bind", "0.0.0.0"]
+CMD ["hugo", "server", "--bind", "0.0.0.0", "--baseURL" , "takira.hugo.com", "--appendPort=false"]
